# infinitebbs-desktop

./: .gitignore  LICENSE  README.md  TODO  justfile  package.json
backend/: Cargo.toml  tauri.conf.json
backend/capabilities/: default.json
backend/icons/: icon.icns
backend/src/: common.rs  lib.rs  main.rs  service.rs  setup.rs  window.rs
frontend/: .env  eslint.config.js  index.html  knip.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  index.tsx
frontend/src/api/: auth.ts  client.ts  config.ts  index.ts  post.ts  reaction.ts  topic.ts  user.ts
frontend/src/components/ReactionPicker/: ReactionPicker.css
frontend/src/components/assetcard/: AssetCard.css  AssetCard.tsx
frontend/src/components/editor/: CategorySelector.css  CategorySelector.tsx  Editor.css  Editor.tsx
frontend/src/components/layout/: Layout.css  Layout.tsx
frontend/src/components/loading/: Loading.css  Loading.tsx  SmallLoading.tsx
frontend/src/components/markdown/: MarkdownContent.css  MarkdownContent.tsx
frontend/src/components/post/: PostItem.css  PostItem.tsx
frontend/src/components/reaction/: ReactionPicker.css  ReactionPicker.tsx
frontend/src/components/topic/: TopicRow.css  TopicRow.tsx
frontend/src/constants/: reactions.ts
frontend/src/hooks/: useDraggable.ts
frontend/src/pages/home/: Home.css  Home.tsx
frontend/src/pages/login/: Login.css  Login.tsx
frontend/src/store/: auth.ts  categories.ts  editor.ts  reactionPicker.ts  topic.ts  user.ts  userProfile.ts
frontend/src/utils/: auth.ts  format.ts  time.ts
(+10 files in other folders)
