[package]
name = "infinitebbs"
version = "0.1.0"
description = "An infinitebbs desktop application"
authors = ["infinitebbs <infinitebbs@proton.me>"]
edition = "2024"

[lib]
name = "infinitebbs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", default-features = false, features = [
    "std",
    "attributes",
] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }


[profile.dev]
incremental = true
strip = false
lto = false
opt-level = 0

[profile.dev.package."*"]
opt-level = 0
incremental = true

[profile.dev.build-override]
opt-level = 0
incremental = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
